--- a/MVC_SalesApp.Data/MVC_SalesApp.Data.csproj
+++ b/MVC_SalesApp.Data/MVC_SalesApp.Data.csproj
@@ -47,11 +47,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
-    <Compile Include="CustomerData.cs" />
+    <Compile Include="Core\IUnitOfWork.cs" />
+    <Compile Include="Core\UnitOfWork.cs" />
+    <Compile Include="CustomerDataRepository.cs" />
     <Compile Include="CustomerWithOrdersData.cs" />
     <Compile Include="OrderSystemContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\ICustomerDataRepository.cs" />
+    <Compile Include="Repository\IRepository.cs" />
+    <Compile Include="Repository\Repository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
